# grappa

./: hostsfile_haoran  hostsfile_haoran1  hostsfile_haoran2  hostsfile_haoran3  hostsfile_haoran4  hostsfile_haoran5  hostsfile_haoran6  hostsfile_haoran7  hostsfile_haoran8  prepare_kvstore.sh  run_kvstore.sh  runall.sh  update_guest.sh  update_haoran.sh  update_shan.sh
applications/: CMakeLists.txt
applications/dataframe/: CMakeLists.txt  dataframe_global.cpp  dataframe_query.cpp  my_group_2.csv
applications/demos/drust_test/: drust_test.cpp
applications/demos/hello_world/: hello_world.cpp  read_video.cpp  thread_queue.cpp
applications/graph500/grappa/: graph.hpp
applications/join/: CMakeLists.txt
applications/kvstore/: CMakeLists.txt  DHT.hpp  kvstore.cpp
applications/matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  grappa_matmul.cpp  test_strassen_mul.cpp
applications/socialnet/: CMakeLists.txt  constants.h  data.cpp  frame.cpp  frame.hpp  main.cpp  post.hpp  text.cpp  text.hpp  video.cpp  video.hpp
applications/socialnet/drust/: mod.rs  remote_function.rs  utils.rs  video.rs
applications/socialnet/gam/: mod.rs  post.rs  utils.rs  video.rs
doc/tutorial/: search2.cpp  tree.hpp
system/: Addressing.hpp  Aggregator.hpp  GlobalCompletionEvent.hpp  MessageBase.hpp  RDMAAggregator.cpp
